fixed logo getting cut off

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,7 +13,6 @@
 
   img {
     margin: 0 auto;
-    border-radius: 8px;
   }
 
   .btn-hover {
